Corrigi bug 5 e alinhei texto da tabela com tex´-align: center

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -33,10 +33,6 @@ div>p:first-child {
     display: inline;
 }
 
-div img {
-    background: black;
-}
-
 .botao-amarelo {
     background-color: #ffaf43;
     width: 250px;
@@ -129,12 +125,12 @@ td button {
 
 
 #back-button {
-    background-color: white;
+    background-color: rgb(231, 235, 3);
     width: 100px;
     height: 20px;
     border: 1px solid black;
     border-radius: 5px;
-    font-size: 10px;
+    font-size: 30px;
     color: black;
 }
 
